change --> remove height in certification images, change position in project image to top

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div class="bubble info_bubble">
+            <h3 class="title">Tecnologia</h3>
+            <p class="description">descripcion de la tecnologia, mejor detallada para que parezca un texto bien redactado.</p>
+        </div>
         <div class="bubble bio_bubble">
             <div class="header_bubble"></div>
             <img class="photo" src="./src/img/photos/johnKPhoto.webp" alt="Foto de Jonathan Grajeda" loading="lazy" />
@@ -4463,10 +4467,7 @@
                 </div>
             </div>
         </div>
-        <div class="bubble info_bubble">
-            <h3 class="title">Tecnologia</h3>
-            <p class="description">descripcion de la tecnologia, mejor detallada para que parezca un texto bien redactado.</p>
-        </div>
+
         <section class="section skills_section" id="skills_section">
             <div class="section_content content">
                 <div class="swipe_animation_container_full">
@@ -4670,28 +4671,28 @@
                 <div class="icons_container certifications_icons_container">
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/responsive_web_design.webp" alt="Imagen de Certificado en `Diseño Web Responsivo` emitido por FreeCodeCamp" height="350px" loading="lazy" />
+                            <img class="image" src="./src/img/certifications/responsive_web_design.webp" alt="Imagen de Certificado en `Diseño Web Responsivo` emitido por FreeCodeCamp" loading="lazy" />
                             <h3 class="badge_name">Responsive Web Design</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/responsive-web-design" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/legacy_js.webp" alt="Imagen de Certificado en `Algoritmos Javascript y Estructura` de Datos emitido por FreeCodeCamp" height="350px" loading="lazy" />
+                            <img class="image" src="./src/img/certifications/legacy_js.webp" alt="Imagen de Certificado en `Algoritmos Javascript y Estructura` de Datos emitido por FreeCodeCamp" loading="lazy" />
                             <h3 class="badge_name">Legacy - JavaScript Algoritms and Data Structures</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/javascript-algorithms-and-data-structures" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/data_visualization.webp" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" height="350px" loading="lazy" />
+                            <img class="image" src="./src/img/certifications/data_visualization.webp" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" loading="lazy" />
                             <h3 class="badge_name">Data Visualization</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/data-visualization" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/scientific_computing_python.webp" alt="Imagen de Certificado en `Computación Cientifica Con Python` emitido por FreeCodeCamp" height="350px" loading="lazy" />
+                            <img class="image" src="./src/img/certifications/scientific_computing_python.webp" alt="Imagen de Certificado en `Computación Cientifica Con Python` emitido por FreeCodeCamp" loading="lazy" />
                             <h3 class="badge_name">Scientific Computing With Python</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/scientific-computing-with-python-v7" aria-label="" target="_blank">Ver</a>
