add --> reduce number of project cards in hot cards container for mediaQuerys

--- a/index.html
+++ b/index.html
@@ -5228,7 +5228,7 @@
     <template id="card_project_template">
         <article class="project_card hot_project_card" id="">
             <div class="card_content">
-                <img class="img_card" src="" aria-label="" loading="lazy" />
+                <img class="img_card" src="" aria-label="" loading="lazy" height="360" />
                 <div class="info_card">
                     <h1 class="title"></h1>
                     <h2 class="subtitle">Realizado con:</h2>
