add --> legal disclaimer and change first show legals instead of data alert

--- a/index.html
+++ b/index.html
@@ -118,20 +118,38 @@
             <div class="modal_window legal_modal" id="legal_modal">
                 <div class="modal_header">
                     <h1 class="title_modal">Aviso Legal</h1>
-                    <h2>Avisos legales y articulos que mas aderlante incluire:</h2>
+                    <h2>Términos y Condiciones de Uso:</h2>
                 </div>
                 <div class="modal_info modal_info_legal">
-                    <p class="description_modal">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi, magnam corrupti sed delectus odit tempore saepe nam asperiores enim, porro quod placeat qui sunt omnis deserunt nemo cupiditate. Soluta! Omnis illum voluptatibus veniam officiis commodi quisquam odio
-                        dolorum similique eum incidunt? Dolores vel perspiciatis veritatis, similique quis soluta, tempora ab maxime sit dolore minus ullam sunt aliquam, voluptatum numquam? Iure velit saepe perspiciatis incidunt optio facere quasi, repudiandae aspernatur? Quibusdam dolore tenetur
-                        distinctio ullam dicta dolores provident inventore cum repudiandae cupiditate, rerum rem magni alias assumenda corrupti, odit molestiae. Ab quis dicta delectus, natus voluptatum illum ex itaque assumenda animi officia dolorem quisquam sapiente molestias ipsa minima cumque,
-                        culpa molestiae magnam consequuntur possimus. Magnam illo nisi reprehenderit id voluptas! Ratione aliquid quo odio, dignissimos alias consequatur consequuntur neque ullam amet! Ad asperiores dolorem nostrum vitae dolore autem laudantium iusto unde totam voluptatem ipsam
-                        repellendus, perspiciatis, sequi obcaecati quia aperiam. Neque, qui atque nesciunt voluptas ad tempore velit asperiores harum temporibus repellat enim doloremque, fugiat similique inventore exercitationem minima consequuntur numquam culpa voluptatem ut eius? Sequi quo
-                        doloribus dolores cum. Quis sequi laborum cupiditate fugiat, repudiandae veniam maxime debitis, repellat repellendus praesentium similique corrupti modi. Ea ipsam tempora consequatur odit! Blanditiis autem et odio in excepturi officiis, cum inventore perspiciatis! Eligendi
-                        rem vero suscipit, dignissimos ullam consequuntur, laborum et non aspernatur doloribus voluptatum hic obcaecati. Eum magnam a soluta doloribus nam quae voluptate, velit quisquam doloremque odit rerum, ad totam? Sequi quidem doloremque quia voluptate adipisci eaque pariatur
-                        minus, eligendi, facere similique, provident ad soluta fugiat. Voluptatem hic pariatur, delectus enim distinctio eos! Fuga quos facilis recusandae fugit reprehenderit delectus. Animi eos eveniet atque libero quo quisquam officia, ducimus neque suscipit similique aliquid velit
-                        enim, recusandae voluptatibus laborum obcaecati. Maiores aut quae architecto molestiae quisquam nemo odio est soluta ut!
+                    <h3>Uso del Sitio Web:</h3>
+                    <p>Al acceder y utilizar este sitio web, usted acepta cumplir con estos términos y condiciones de uso. Si no está de acuerdo con alguno de estos términos, por favor absténgase de utilizar este sitio.</p>
+                    <br />
+                    <h3>Propiedad Intelectual:</h3>
+                    <p>
+                        Todos los derechos de propiedad intelectual sobre los diseños, ilustraciones, desarrollos web y demás contenido presentado en este sitio web son propiedad exclusiva del titular del sitio, a menos que se indique lo contrario. Queda estrictamente prohibida la reproducción,
+                        distribución o modificación de dicho contenido sin el consentimiento expreso del titular.
                     </p>
+                    <br />
+                    <h3>Contacto y Servicios:</h3>
+                    <p>
+                        Este sitio web proporciona información sobre los trabajos realizados por el titular y ofrece la posibilidad de contactarlo para solicitar sus servicios como diseñador, ilustrador y desarrollador web. Cualquier acuerdo o contratación de servicios se regirá por acuerdos
+                        separados entre el titular y el cliente.
+                    </p>
+                    <br />
+                    <h3>Enlaces a Terceros:</h3>
+                    <p>
+                        Este sitio web puede contener enlaces a otros sitios web de terceros que son proporcionados únicamente como referencia. El titular del sitio no tiene control sobre el contenido o las políticas de privacidad de estos sitios y no se hace responsable por su contenido o
+                        prácticas.
+                    </p>
+                    <br />
+                    <h3>Limitación de Responsabilidad:</h3>
+                    <p>El titular del sitio no será responsable de ningún daño directo, indirecto, incidental, especial, emergente o punitivo que surja del uso o la incapacidad de utilizar este sitio web.</p>
+                    <br />
+                    <h3>Modificaciones:</h3>
+                    <p>El titular del sitio se reserva el derecho de modificar, suspender o discontinuar cualquier aspecto de este sitio web en cualquier momento y sin previo aviso.</p>
+                    <br />
+                    <h3>Jurisdicción y Ley Aplicable:</h3>
+                    <p>Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes de la Ciudad de México y cualquier disputa que surja en relación con estos términos y condiciones estará sujeta a la jurisdicción exclusiva de los tribunales de México.</p>
                     <div class="btn_container">
                         <button type="button" class="inner_link_btn" data-current="legal_modal" data-next="alert_modal">
                             <span class="label_btn">Avisos De Datos</span>
@@ -5173,7 +5191,7 @@
                 </div>
                 <div class="lebels_container">
                     <div class="made_content">
-                        <a href="https://github.com/JohnMcKrazy" target="_blank" class="link_text">@JohnKrazy</a>
+                        <h4 class="copy_rights">@JohnKrazy - 2024 - Derechos reservados</h4>
                         <div class="btns_container">
                             <button type="button" class="link_btn" data-name="legal_modal">
                                 <span class="label_btn">Legales</span>
