change --> retur data alert instead legals

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="btn_container">
-                    <button type="button" class="btn more_btn storage_accept">
+                    <button type="button" class="btn more_btn alert_modal_accept_btn storage_accept">
                         <span class="label_btn">Aceptar</span>
                     </button>
                 </div>
