--- a/index.html
+++ b/index.html
@@ -3347,7 +3347,7 @@
                                 <circle class="cls-30" cx="426.24" cy="73.87" r="1.48" />
                                 <circle class="cls-30" cx="451.82" cy="69.53" r="1.48" />
                                 <path
-                                    class="cls-31"
+                                    class="cls-30"
                                     d="m446.56,74.02c-1.63-.72-3.55-.84-5.2-.16-.31.13-.61.28-.94.31-.56.06-1.1-.23-1.66-.26-.57-.02-1.11.22-1.6.51-1.49.86-2.77,2.14-3.4,3.74-.64,1.59-.57,3.51.38,4.94.18.27.38.52.64.71.32.23.71.36,1.07.52.9.4,1.67,1.06,2.49,1.6.82.55,1.77,1.01,2.76.94.81-.05,1.49-.69,2.27-.68.88.01,1.86-.22,2.67-.57.69-.3,1.32-.78,1.69-1.43.21-.36.32-.77.53-1.14.46-.82,1.28-1.36,1.93-2.04,1.04-1.09.99-2.19.27-3.42-.9-1.54-2.24-2.84-3.87-3.56Zm-6.52,4.89c.26.39.39.84.49,1.29.12.6.17,1.23-.01,1.82-.18.58-.64,1.11-1.24,1.24-.21.05-.44.04-.66.04-.42,0-.95.08-1.32.28-.12.06-.23.14-.36.18-.13.04-.29.02-.38-.08-.09-.1-.09-.25-.05-.37.04-.12.12-.23.19-.34.29-.5.28-1.08.23-1.63-.04-.43-.25-.88-.2-1.31.06-.45.31-.95.61-1.29.4-.45,1.02-.73,1.61-.62.45.09.84.41,1.1.79Zm8.35,1.93c-.34,1.29-2.92-.11-3.75.13.08-.02.15-.04.23-.07-.36-.43-.48-1-.52-1.55-.03-.4-.02-.82.14-1.2s.49-.69.89-.74c.52-.06.98.34,1.22.81.25.48.29,1.68.84,1.92.28.12.56-.14.83.13.15.16.18.37.12.57Z"
                                 />
                                 <path
@@ -4792,7 +4792,10 @@
                         </div>
                         <div class="info_card">
                             <h1 class="title">Diseño Gráfico</h1>
-                            <p class="info">Es necesaria la comunicación gráfica para muchas aréas de negocios/empresas, desde papeleria basica hasta promocionales digitales e impresos, cada necesidad se majeda desde angulos diferentes como originalidad en cada paso de la creación.</p>
+                            <p class="info">
+                                Mi enfoque en el diseño gráfico se basa en la funcionalidad y la estética. Utilizo herramientas como Adobe Illustrator y Photoshop para transformar conceptos en imágenes tangibles y efectivas. Desde la creación de logotipos hasta la elaboración de material
+                                promocional, mi trabajo se centra en transmitir el mensaje de manera clara y visualmente atractiva.
+                            </p>
                         </div>
                     </article>
                     <article class="service_card web_card">
@@ -4874,7 +4877,10 @@
                         </div>
                         <div class="info_card">
                             <h1 class="title">Desarrollo Web</h1>
-                            <p class="info">Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.</p>
+                            <p class="info">
+                                Como desarrollador web, mi enfoque está en crear sitios funcionales y accesibles. Utilizo lenguajes de programación como HTML, CSS y JavaScript para construir plataformas sólidas y adaptables. Desde la optimización de la experiencia del usuario hasta la garantía de la
+                                compatibilidad entre dispositivos, mi trabajo se basa en utilizar las últimas herramientas y técnicas para ofrecer resultados de calidad.
+                            </p>
                         </div>
                     </article>
                     <article class="service_card illustration_card">
@@ -5693,7 +5699,10 @@
                         </div>
                         <div class="info_card info_service_card">
                             <h1 class="title">Ilustración</h1>
-                            <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
+                            <p class="info">
+                                Mi proceso de ilustración se basa en la experimentación y la atención al detalle. Utilizo técnicas tradicionales y digitales para crear imágenes que cuenten una historia de manera clara y cautivadora. Desde bocetos iniciales hasta el acabado final, mi trabajo se
+                                enfoca en capturar la esencia de cada proyecto y transmitirla de manera visualmente impactante.
+                            </p>
                         </div>
                     </article>
                 </div>
