change --> adding padding in list btn

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Albert Einstein</i></span>
-                    <span class="author_info">Premio novel de fisica</span>
+                    <span class="author_info">Premio novel de física</span>
                 </figcaption>
             </figure>
         </div>
@@ -5776,8 +5776,7 @@
                         <div class="info_card">
                             <h1 class="title">Desarrollo Web</h1>
                             <p class="info">
-                                Como desarrollador web, mi enfoque está en crear sitios funcionales y accesibles. Utilizo lenguajes de programación como HTML, CSS y JavaScript para construir plataformas sólidas y adaptables. Desde la optimización de la experiencia del usuario hasta la garantía de la
-                                compatibilidad entre dispositivos, mi trabajo se basa en utilizar las últimas herramientas y técnicas para ofrecer resultados de calidad.
+                                Construcción de plataformas sólidas y adaptables, desde la optimización de la experiencia del usuario hasta la garantía de la compatibilidad entre dispositivos, mi trabajo se basa en utilizar las últimas herramientas y técnicas para ofrecer resultados de calidad.
                             </p>
                         </div>
                     </article>
