change --> new contact quote

--- a/index.html
+++ b/index.html
@@ -4796,7 +4796,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Louis Srygley</i></span>
-                    <span class="author_info">Diseñador gráfico y director de cine</span>
+                    <span class="author_info">Arquitecto de Software</span>
                 </figcaption>
             </figure>
         </div>
@@ -5838,7 +5838,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote">El diseño no es solo cómo se ve y se siente. El diseño es cómo funciona.</q>
+                    <q class="quote">Yo hago lo que usted no puede, y usted hace lo que yo no puedo. Juntos podemos hacer grandes cosas.</q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -5848,8 +5848,8 @@
                     </span>
                 </div>
                 <figcaption class="author_container">
-                    <span class="author"><i>Saul Bass</i></span>
-                    <span class="author_info">Diseñador gráfico y director de cine</span>
+                    <span class="author"><i>Madre Teresa de Calcuta</i></span>
+                    <span class="author_info">Premio Nobel de la Paz</span>
                 </figcaption>
             </figure>
         </div>
