change --> kobe info change

--- a/index.html
+++ b/index.html
@@ -4506,7 +4506,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info">NBA Champion</span>
+                    <span class="author_info">Jugador de la NBA</span>
                 </figcaption>
             </figure>
         </div>
@@ -4729,7 +4729,7 @@
                     </div>
                     <figcaption class="author_container">
                         <span class="author"><i>Kobe Bryant</i></span>
-                        <span class="author_info">NBA Champion</span>
+                        <span class="author_info">Jugador de la NBA</span>
                     </figcaption>
                 </figure>
             </div>
