--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="canonical" href="https://johnmckrazy.github.io/JohnK_Portafolio/" />
         <link rel="stylesheet" href="./src/css/style.min.css" />
     </head>
-    <body class="dark_theme">
+    <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -4480,7 +4480,6 @@
                 </div>
             </div>
         </section>
-
         <div class="section_divider">
             <figure class="content">
                 <div class="quote_container">
@@ -4615,6 +4614,17 @@
                             </div>
                             <h3 class="badge_name">CSS</h3>
                         </div>
+                        <div class="badge skill_badge" data-name="sass">
+                            <div class="icon_container">
+                                <svg class="sass_icon_svg" data-name="sass_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
+                                    <path
+                                        class="cls-1"
+                                        d="M21.52 13.89a5.23 5.23 0 0 0-2.26.53 4.64 4.64 0 0 1-.51-1.17 3.2 3.2 0 0 1-.05-1 8.25 8.25 0 0 1 .3-1.05s-.05-.26-.56-.27-.93.1-1 .23a5.06 5.06 0 0 0-.21.75 18.35 18.35 0 0 1-1.53 2.94 3.1 3.1 0 0 1-.35-.86 3.54 3.54 0 0 1 0-1 7.21 7.21 0 0 1 .3-1.06s-.06-.26-.56-.27-.94.1-1 .23-.1.45-.21.75-1.32 3-1.64 3.73c-.16.36-.3.65-.4.84l-.13.25c-.07.12-.15.24-.18.24a1.77 1.77 0 0 1 0-.78c.18-.94.62-2.41.62-2.46s.08-.29-.29-.42a.45.45 0 0 0-.51.09s-.05.08-.05.08.39-1.66-.76-1.66a3.42 3.42 0 0 0-2.21 1.51l-1.7.94-.81.45-.06-.06c-1.39-1.49-4-2.54-3.87-4.55 0-.72.29-2.64 5-5 3.83-1.9 6.89-1.38 7.42-.22.76 1.66-1.64 4.75-5.61 5.19a3 3 0 0 1-2.51-.63C5.94 10 5.91 10 5.83 10s0 .28 0 .4a2.39 2.39 0 0 0 1.44 1.13 7.6 7.6 0 0 0 4.65-.46c2.41-.94 4.29-3.52 3.74-5.69S11.44 2.5 8 3.72A17.43 17.43 0 0 0 2.11 7.1C.2 8.88-.1 10.43 0 11.07c.44 2.3 3.61 3.8 4.88 4.91l-.18.1c-.63.31-3.05 1.58-3.65 2.91-.69 1.52.1 2.61.63 2.75A3.89 3.89 0 0 0 5.91 20a4.2 4.2 0 0 0 .38-3.88l.49-.3.92-.51A6.26 6.26 0 0 0 7.36 17a3.52 3.52 0 0 0 .75 2.41.83.83 0 0 0 .6.19c.54 0 .78-.44 1-1s.63-1.4.63-1.4-.37 2 .63 2c.37 0 .73-.47.9-.71v-.05l.06-.09c.15-.26.47-.84 1-1.8.63-1.24 1.24-2.79 1.24-2.79a6.85 6.85 0 0 0 .24 1A8.51 8.51 0 0 0 15 16l-.24.32c-.12.16-.25.33-.39.49a15.2 15.2 0 0 0-1.17 1.47.41.41 0 0 0 .11.54.94.94 0 0 0 .61.1 2.69 2.69 0 0 0 .92-.21 3 3 0 0 0 .79-.42 1.75 1.75 0 0 0 .76-1.56 3.27 3.27 0 0 0-.29-1.09l.13-.2A21.28 21.28 0 0 0 17.58 13a9.47 9.47 0 0 0 .24 1 7.65 7.65 0 0 0 .44 1 4.39 4.39 0 0 0-1.33 1.73c-.29.83-.06 1.2.36 1.29a1.27 1.27 0 0 0 .67-.14 3 3 0 0 0 .85-.43 1.93 1.93 0 0 0 .93-1.45 3.24 3.24 0 0 0-.21-.92 4.71 4.71 0 0 1 2.47-.31c2.17.25 2.6 1.61 2.52 2.17a1.46 1.46 0 0 1-.69 1c-.15.09-.2.13-.18.2s.08.09.22.07A1.69 1.69 0 0 0 25 16.68c.06-1.34-1.22-2.8-3.48-2.79ZM4.76 19.54c-.76.79-1.76 1.08-2.16.83s-.28-1.42.6-2.26a10.85 10.85 0 0 1 1.7-1.26l.44-.27.11-.07a3.1 3.1 0 0 1-.74 3.06ZM10 16c-.25.61-.78 2.18-1.09 2.09s-.44-1.26-.06-2.43a5.52 5.52 0 0 1 .86-1.57c.39-.44.82-.58.93-.4A8 8 0 0 1 10 16Zm4.34 2a.35.35 0 0 1-.25.07s.05-.1.05-.1.54-.58.75-.85.27-.33.43-.54v.06a1.79 1.79 0 0 1-1 1.36Zm3.34-.76c-.08-.06-.07-.24.2-.81a3 3 0 0 1 .74-.95 1.06 1.06 0 0 1 .07.42 1.37 1.37 0 0 1-1.01 1.38Z"
+                                    />
+                                </svg>
+                            </div>
+                            <h3 class="badge_name">SASS</h3>
+                        </div>
                         <div class="badge skill_badge" data-name="js">
                             <div class="icon_container">
                                 <svg class="js_icon_svg" data-name="js_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
@@ -4627,31 +4637,38 @@
                             </div>
                             <h3 class="badge_name">Javascrip</h3>
                         </div>
-                        <div class="badge skill_badge" data-name="sass">
+                        <div class="badge skill_badge" data-name="vue">
                             <div class="icon_container">
-                                <svg class="sass_icon_svg" data-name="sass_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-                                    <path
-                                        class="cls-1"
-                                        d="M21.52 13.89a5.23 5.23 0 0 0-2.26.53 4.64 4.64 0 0 1-.51-1.17 3.2 3.2 0 0 1-.05-1 8.25 8.25 0 0 1 .3-1.05s-.05-.26-.56-.27-.93.1-1 .23a5.06 5.06 0 0 0-.21.75 18.35 18.35 0 0 1-1.53 2.94 3.1 3.1 0 0 1-.35-.86 3.54 3.54 0 0 1 0-1 7.21 7.21 0 0 1 .3-1.06s-.06-.26-.56-.27-.94.1-1 .23-.1.45-.21.75-1.32 3-1.64 3.73c-.16.36-.3.65-.4.84l-.13.25c-.07.12-.15.24-.18.24a1.77 1.77 0 0 1 0-.78c.18-.94.62-2.41.62-2.46s.08-.29-.29-.42a.45.45 0 0 0-.51.09s-.05.08-.05.08.39-1.66-.76-1.66a3.42 3.42 0 0 0-2.21 1.51l-1.7.94-.81.45-.06-.06c-1.39-1.49-4-2.54-3.87-4.55 0-.72.29-2.64 5-5 3.83-1.9 6.89-1.38 7.42-.22.76 1.66-1.64 4.75-5.61 5.19a3 3 0 0 1-2.51-.63C5.94 10 5.91 10 5.83 10s0 .28 0 .4a2.39 2.39 0 0 0 1.44 1.13 7.6 7.6 0 0 0 4.65-.46c2.41-.94 4.29-3.52 3.74-5.69S11.44 2.5 8 3.72A17.43 17.43 0 0 0 2.11 7.1C.2 8.88-.1 10.43 0 11.07c.44 2.3 3.61 3.8 4.88 4.91l-.18.1c-.63.31-3.05 1.58-3.65 2.91-.69 1.52.1 2.61.63 2.75A3.89 3.89 0 0 0 5.91 20a4.2 4.2 0 0 0 .38-3.88l.49-.3.92-.51A6.26 6.26 0 0 0 7.36 17a3.52 3.52 0 0 0 .75 2.41.83.83 0 0 0 .6.19c.54 0 .78-.44 1-1s.63-1.4.63-1.4-.37 2 .63 2c.37 0 .73-.47.9-.71v-.05l.06-.09c.15-.26.47-.84 1-1.8.63-1.24 1.24-2.79 1.24-2.79a6.85 6.85 0 0 0 .24 1A8.51 8.51 0 0 0 15 16l-.24.32c-.12.16-.25.33-.39.49a15.2 15.2 0 0 0-1.17 1.47.41.41 0 0 0 .11.54.94.94 0 0 0 .61.1 2.69 2.69 0 0 0 .92-.21 3 3 0 0 0 .79-.42 1.75 1.75 0 0 0 .76-1.56 3.27 3.27 0 0 0-.29-1.09l.13-.2A21.28 21.28 0 0 0 17.58 13a9.47 9.47 0 0 0 .24 1 7.65 7.65 0 0 0 .44 1 4.39 4.39 0 0 0-1.33 1.73c-.29.83-.06 1.2.36 1.29a1.27 1.27 0 0 0 .67-.14 3 3 0 0 0 .85-.43 1.93 1.93 0 0 0 .93-1.45 3.24 3.24 0 0 0-.21-.92 4.71 4.71 0 0 1 2.47-.31c2.17.25 2.6 1.61 2.52 2.17a1.46 1.46 0 0 1-.69 1c-.15.09-.2.13-.18.2s.08.09.22.07A1.69 1.69 0 0 0 25 16.68c.06-1.34-1.22-2.8-3.48-2.79ZM4.76 19.54c-.76.79-1.76 1.08-2.16.83s-.28-1.42.6-2.26a10.85 10.85 0 0 1 1.7-1.26l.44-.27.11-.07a3.1 3.1 0 0 1-.74 3.06ZM10 16c-.25.61-.78 2.18-1.09 2.09s-.44-1.26-.06-2.43a5.52 5.52 0 0 1 .86-1.57c.39-.44.82-.58.93-.4A8 8 0 0 1 10 16Zm4.34 2a.35.35 0 0 1-.25.07s.05-.1.05-.1.54-.58.75-.85.27-.33.43-.54v.06a1.79 1.79 0 0 1-1 1.36Zm3.34-.76c-.08-.06-.07-.24.2-.81a3 3 0 0 1 .74-.95 1.06 1.06 0 0 1 .07.42 1.37 1.37 0 0 1-1.01 1.38Z"
-                                    />
+                                <svg class="vue_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
+                                    <path class="cls-2" d="m20,1.72h5l-12.5,21.56L0,1.72h9.56l2.94,5,2.88-5h4.63Z" />
+                                    <path class="cls-2" d="m0,1.72l12.5,21.56L25,1.72h-5l-7.5,12.94L4.94,1.72H0Z" />
+                                    <path class="cls-1" d="m4.94,1.72l7.56,13L20,1.72h-4.63l-2.88,5-2.94-5h-4.62Z" />
                                 </svg>
                             </div>
-                            <h3 class="badge_name">SASS</h3>
+                            <h3 class="badge_name">Vue.js</h3>
                         </div>
-                        <div class="badge skill_badge" data-name="gitHub">
+                        <div class="badge skill_badge" data-name="react">
                             <div class="icon_container">
-                                <svg class="gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
+                                <svg class="react_icon_svg" data-name="react_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
                                     <path
                                         class="cls-1"
-                                        d="M12.5.31a12.5 12.5 0 0 0-3.95 24.36c.62.12.85-.27.85-.6v-2.33c-3.48.76-4.22-1.47-4.22-1.47a3.26 3.26 0 0 0-1.38-1.83c-1.14-.78.08-.76.08-.76A2.63 2.63 0 0 1 5.79 19a2.66 2.66 0 0 0 3.64 1 2.68 2.68 0 0 1 .79-1.67C7.44 18 4.52 17 4.52 12.16A4.85 4.85 0 0 1 5.81 8.8a4.49 4.49 0 0 1 .12-3.31S7 5.16 9.37 6.77a12.56 12.56 0 0 1 3.13-.42 12.56 12.56 0 0 1 3.13.42c2.37-1.61 3.44-1.28 3.44-1.28a4.49 4.49 0 0 1 .12 3.31 4.84 4.84 0 0 1 1.28 3.36c0 4.8-2.92 5.85-5.7 6.16a3 3 0 0 1 .84 2.32v3.43c0 .43.23.72.86.6A12.5 12.5 0 0 0 12.5.31Z"
+                                        d="M20.56 8.59c-.27-.09-.53-.18-.8-.25.04-.18.09-.37.12-.55.61-2.96.21-5.34-1.15-6.12-1.3-.75-3.44.03-5.59 1.91-.21.19-.42.38-.62.57-.14-.13-.27-.26-.41-.38C9.84 1.75 7.58.91 6.22 1.69c-1.3.75-1.69 2.99-1.14 5.8.05.28.12.55.18.83-.32.09-.63.19-.93.29-2.65.92-4.34 2.37-4.34 3.87s1.81 3.1 4.57 4.05c.22.08.45.15.68.21-.07.3-.14.59-.2.89-.52 2.75-.11 4.94 1.18 5.69 1.34.77 3.59-.02 5.79-1.94.17-.15.35-.31.52-.48.22.21.44.42.68.62 2.12 1.83 4.22 2.57 5.52 1.82 1.34-.78 1.78-3.13 1.21-5.98-.04-.22-.09-.44-.15-.67.16-.05.31-.1.46-.15 2.87-.95 4.73-2.48 4.73-4.05s-1.74-2.96-4.44-3.89Zm-6.72-4.21c1.85-1.61 3.57-2.24 4.36-1.79.84.48 1.16 2.43.64 4.98-.03.17-.07.33-.11.5-1.1-.25-2.22-.43-3.34-.53-.64-.93-1.35-1.81-2.11-2.64.19-.18.38-.36.57-.53Zm-6.45 9.39a33.615 33.615 0 0 0 1.49 2.57c-.77-.08-1.54-.21-2.3-.37.22-.71.49-1.45.81-2.21Zm0-2.51c-.31-.74-.58-1.46-.79-2.16.71-.16 1.47-.29 2.27-.39-.27.41-.52.83-.77 1.26-.25.43-.48.86-.71 1.29Zm.57 1.26a29.68 29.68 0 0 1 2.27-3.95c.74-.06 1.51-.09 2.28-.09s1.54.03 2.28.09c.42.63.83 1.27 1.2 1.92.38.66.74 1.33 1.08 2.01-.33.69-.69 1.36-1.07 2.02-.38.66-.78 1.3-1.2 1.94-.74.05-1.51.08-2.29.08s-1.53-.02-2.26-.07c-.43-.63-.84-1.28-1.22-1.94-.38-.66-.74-1.33-1.07-2.01Zm8.97 2.54c.25-.44.49-.88.72-1.32.32.72.6 1.45.84 2.2-.77.17-1.55.31-2.33.4.26-.42.52-.84.77-1.27Zm.71-3.8c-.23-.44-.47-.87-.72-1.3-.24-.42-.5-.84-.76-1.25.8.1 1.56.23 2.28.4-.23.73-.5 1.45-.8 2.15Zm-5.12-5.58c.52.57 1.01 1.16 1.47 1.78-.98-.05-1.97-.05-2.95 0 .49-.64.98-1.24 1.48-1.78ZM6.76 2.63c.84-.48 2.69.21 4.64 1.94l.38.35c-.77.83-1.48 1.71-2.13 2.64-1.12.1-2.24.27-3.34.52-.06-.26-.12-.51-.17-.77-.47-2.4-.16-4.21.63-4.67ZM5.54 15.72c-.21-.06-.41-.12-.62-.19A9.026 9.026 0 0 1 2 13.98c-.5-.35-.84-.88-.93-1.49 0-.91 1.36-2.07 3.62-2.86.28-.1.57-.19.86-.27.34 1.08.74 2.13 1.22 3.16-.48 1.04-.89 2.11-1.23 3.2Zm5.79 4.87c-.82.75-1.77 1.34-2.8 1.75-.55.26-1.18.29-1.75.07-.79-.45-1.12-2.21-.67-4.57.05-.28.11-.55.18-.83 1.11.24 2.24.4 3.37.49.66.93 1.37 1.82 2.15 2.65-.16.15-.31.3-.48.44Zm1.22-1.21c-.51-.55-1.01-1.15-1.5-1.8a37.653 37.653 0 0 0 2.97 0c-.46.63-.95 1.23-1.47 1.81Zm6.49 1.49c-.05.61-.34 1.17-.82 1.55-.79.46-2.47-.14-4.29-1.7-.21-.18-.42-.37-.63-.57.76-.84 1.46-1.73 2.1-2.66 1.14-.1 2.27-.27 3.39-.52.05.21.1.41.14.6.24 1.08.28 2.2.12 3.3Zm.91-5.33c-.14.05-.28.09-.42.13-.35-1.08-.77-2.14-1.27-3.17.47-1.01.88-2.05 1.22-3.12.26.07.5.15.74.23 2.31.8 3.72 1.97 3.72 2.88 0 .97-1.52 2.22-4 3.04Z"
                                     />
+                                    <path class="cls-1" d="M12.5 10.25c1.23 0 2.23 1 2.23 2.23s-1 2.23-2.23 2.23-2.23-1-2.23-2.23 1-2.23 2.23-2.23" />
+                                </svg>
+                            </div>
+                            <h3 class="badge_name">React.js</h3>
+                        </div>
+                        <div class="badge skill_badge" data-name="node">
+                            <div class="icon_container">
+                                <svg class="node_icon_svg" data-name="node_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
                                     <path
-                                        class="cls-2"
-                                        d="M4.73 18.26c0 .06-.12.08-.21 0s-.14-.12-.11-.18.12-.09.21 0 .15.12.11.19ZM5.24 18.82c-.06.06-.18 0-.25-.06a.18.18 0 0 1 0-.26c.06-.05.17 0 .26.06a.19.19 0 0 1 0 .26ZM5.73 19.54c-.07.05-.2 0-.28-.11a.22.22 0 0 1 0-.3c.07-.05.2 0 .28.11s.07.25 0 .3ZM6.41 20.24a.24.24 0 0 1-.32 0c-.09-.15-.09-.3-.09-.37s.21-.06.32.05a.24.24 0 0 1 .07.32ZM7.34 20.64c0 .1-.17.14-.31.1s-.24-.16-.21-.26.17-.14.32-.1.23.16.2.26ZM8.36 20.71c0 .11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18ZM9.32 20.55c0 .1-.09.21-.24.23s-.28 0-.3-.13.09-.21.24-.23.28 0 .3.13Z"
+                                        class="cls-1"
+                                        d="M12.5 24.86c-.34 0-.66-.09-.95-.25l-3.02-1.79c-.45-.25-.23-.34-.09-.39.61-.2.73-.25 1.36-.61.07-.05.16-.02.23.02l2.32 1.39c.09.05.2.05.27 0l9.06-5.25c.09-.05.14-.14.14-.25V7.26c0-.11-.05-.2-.14-.25l-9.07-5.22c-.09-.05-.2-.05-.27 0L3.28 7.01c-.09.05-.14.16-.14.25v10.47c0 .09.05.2.14.25l2.48 1.43c1.34.68 2.18-.11 2.18-.91V8.17c0-.14.11-.27.27-.27h1.16c.14 0 .27.11.27.27V18.5c0 1.79-.98 2.84-2.68 2.84-.52 0-.93 0-2.09-.57l-2.38-1.36c-.59-.34-.95-.98-.95-1.66V7.28c0-.68.36-1.32.95-1.66L11.55.38a2.02 2.02 0 0 1 1.91 0l9.06 5.25c.59.34.95.98.95 1.66v10.47c0 .68-.36 1.32-.95 1.66l-9.06 5.25c-.3.14-.64.2-.95.2Zm2.79-7.2c-3.97 0-4.79-1.82-4.79-3.36 0-.14.11-.27.27-.27h1.18c.14 0 .25.09.25.23.18 1.2.7 1.79 3.11 1.79 1.91 0 2.72-.43 2.72-1.45 0-.59-.23-1.02-3.2-1.32-2.48-.25-4.02-.79-4.02-2.77 0-1.84 1.54-2.93 4.13-2.93 2.91 0 4.34 1 4.52 3.18 0 .07-.02.14-.07.2-.05.05-.11.09-.18.09h-1.18c-.11 0-.23-.09-.25-.2-.27-1.25-.98-1.66-2.84-1.66-2.09 0-2.34.73-2.34 1.27 0 .66.3.86 3.11 1.23 2.79.36 4.11.89 4.11 2.84-.02 2-1.66 3.13-4.54 3.13Z"
                                     />
                                 </svg>
                             </div>
-                            <h3 class="badge_name">GitHub</h3>
+                            <h3 class="badge_name">Node.JS</h3>
                         </div>
                         <div class="badge skill_badge" data-name="python">
                             <div class="icon_container">
@@ -4672,11 +4689,25 @@
                             </div>
                             <h3 class="badge_name">Python</h3>
                         </div>
+                        <div class="badge skill_badge" data-name="gitHub">
+                            <div class="icon_container">
+                                <svg class="gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
+                                    <path
+                                        class="cls-1"
+                                        d="M12.5.31a12.5 12.5 0 0 0-3.95 24.36c.62.12.85-.27.85-.6v-2.33c-3.48.76-4.22-1.47-4.22-1.47a3.26 3.26 0 0 0-1.38-1.83c-1.14-.78.08-.76.08-.76A2.63 2.63 0 0 1 5.79 19a2.66 2.66 0 0 0 3.64 1 2.68 2.68 0 0 1 .79-1.67C7.44 18 4.52 17 4.52 12.16A4.85 4.85 0 0 1 5.81 8.8a4.49 4.49 0 0 1 .12-3.31S7 5.16 9.37 6.77a12.56 12.56 0 0 1 3.13-.42 12.56 12.56 0 0 1 3.13.42c2.37-1.61 3.44-1.28 3.44-1.28a4.49 4.49 0 0 1 .12 3.31 4.84 4.84 0 0 1 1.28 3.36c0 4.8-2.92 5.85-5.7 6.16a3 3 0 0 1 .84 2.32v3.43c0 .43.23.72.86.6A12.5 12.5 0 0 0 12.5.31Z"
+                                    />
+                                    <path
+                                        class="cls-2"
+                                        d="M4.73 18.26c0 .06-.12.08-.21 0s-.14-.12-.11-.18.12-.09.21 0 .15.12.11.19ZM5.24 18.82c-.06.06-.18 0-.25-.06a.18.18 0 0 1 0-.26c.06-.05.17 0 .26.06a.19.19 0 0 1 0 .26ZM5.73 19.54c-.07.05-.2 0-.28-.11a.22.22 0 0 1 0-.3c.07-.05.2 0 .28.11s.07.25 0 .3ZM6.41 20.24a.24.24 0 0 1-.32 0c-.09-.15-.09-.3-.09-.37s.21-.06.32.05a.24.24 0 0 1 .07.32ZM7.34 20.64c0 .1-.17.14-.31.1s-.24-.16-.21-.26.17-.14.32-.1.23.16.2.26ZM8.36 20.71c0 .11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18ZM9.32 20.55c0 .1-.09.21-.24.23s-.28 0-.3-.13.09-.21.24-.23.28 0 .3.13Z"
+                                    />
+                                </svg>
+                            </div>
+                            <h3 class="badge_name">GitHub</h3>
+                        </div>
                     </div>
                 </div>
-                <div class="skills_icon_container">
+                <!--  <div class="skills_icon_container">
                     <h2 class="subtitle_section">En Proceso</h2>
-                    <!--? SKILLS ICONS-->
                     <div class="icons_container" data-ref="next">
                         <div class="badge skill_badge" data-name="react">
                             <div class="icon_container">
@@ -4702,7 +4733,7 @@
                             <h3 class="badge_name">Node.JS</h3>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <h2 class="subtitle_section">Certificaciones</h2>
                 <div class="icons_container certifications_icons_container">
@@ -5963,7 +5994,6 @@
         </footer>
     </body>
     <!--^^TEAMPLATES-->
-
     <template id="card_project_template">
         <article class="project_card hot_project_card" id="">
             <div class="card_content">
