remove target black in btns with links, center service card content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3 class="name">Jonathan Grajeda</h3>
                 <h3 class="place">México CDMX</h3>
                 <div class="icons_container">
-                    <a href="https://www.behance.net/jg_john_design" target="_blank" class="icon_container footer_social_btn">
+                    <a href="https://www.behance.net/jg_john_design" class="icon_container footer_social_btn">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
                             <path
@@ -45,7 +45,7 @@
                             />
                         </svg>
                     </a>
-                    <a href="https://github.com/JohnMcKrazy" target="_blank" class="icon_container footer_social_btn">
+                    <a href="https://github.com/JohnMcKrazy" class="icon_container footer_social_btn">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
                             <path
@@ -61,7 +61,7 @@
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" target="_blank" class="icon_container footer_social_btn">
+                    <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="icon_container footer_social_btn">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
                             <path
@@ -254,7 +254,7 @@
         </div>
         <div class="menu_controler phone_menu_controler">
             <div class="social_btns_container nav_menu_social_btns">
-                <a href="https://www.behance.net/jg_john_design" target="_blank" class="phone_menu_btn action_menu">
+                <a href="https://www.behance.net/jg_john_design" class="phone_menu_btn action_menu">
                     <div class="icon_social_container">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
@@ -265,7 +265,7 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://github.com/JohnMcKrazy" target="_blank" class="phone_menu_btn action_menu">
+                <a href="https://github.com/JohnMcKrazy" class="phone_menu_btn action_menu">
                     <div class="icon_social_container">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
@@ -283,7 +283,7 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" target="_blank" class="phone_menu_btn">
+                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="phone_menu_btn">
                     <div class="icon_social_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>WhatsApp</title>
@@ -352,7 +352,7 @@
             </button>
 
             <div class="menu_social_btns_container">
-                <a href="https://www.behance.net/jg_john_design" target="_blank" class="social_menu_btn social_btn">
+                <a href="https://www.behance.net/jg_john_design" class="social_menu_btn social_btn">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
@@ -363,7 +363,7 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://github.com/JohnMcKrazy" target="_blank" class="social_menu_btn social_btn">
+                <a href="https://github.com/JohnMcKrazy" class="social_menu_btn social_btn">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
@@ -381,7 +381,7 @@
                         </svg>
                     </div>
                 </a>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" target="_blank" class="social_menu_btn social_btn">
+                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="social_menu_btn social_btn">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
@@ -5962,7 +5962,7 @@
                         </div>
                     </div>
                     <div class="social_btns_container">
-                        <a href="https://www.behance.net/jg_john_design" target="_blank" class="icon_container footer_social_btn">
+                        <a href="https://www.behance.net/jg_john_design" class="icon_container footer_social_btn">
                             <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                                 <title>Behance</title>
                                 <path
@@ -5971,7 +5971,7 @@
                                 />
                             </svg>
                         </a>
-                        <a href="https://github.com/JohnMcKrazy" target="_blank" class="icon_container footer_social_btn">
+                        <a href="https://github.com/JohnMcKrazy" class="icon_container footer_social_btn">
                             <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                                 <title>GitHub</title>
                                 <path
@@ -5987,7 +5987,7 @@
                                 <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                             </svg>
                         </a>
-                        <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" target="_blank" class="icon_container footer_social_btn">
+                        <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="icon_container footer_social_btn">
                             <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>WhatsApp</title>
                                 <path
@@ -6012,7 +6012,7 @@
                     <div class="icons_project_container"></div>
                 </div>
             </div>
-            <a href="" class="btn" data-link="" target="_blank">
+            <a href="" class="btn" data-link="">
                 <span class="label_btn">Ver Proyecto</span>
             </a>
         </article>
@@ -6025,7 +6025,7 @@
                     <h2 class="subtitle">Realizado con:</h2>
                     <div class="icons_project_container"></div>
                 </div>
-                <a href="" class="btn" data-link="" target="_blank" tabindex="1">
+                <a href="" class="btn" data-link="" tabindex="1">
                     <span class="label_btn">Ver Proyecto</span>
                 </a>
             </div>
