refactoried font weight and i tag

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img class="photo" src="./src/img/photos/johnKPhoto.webp" alt="Foto de Jonathan Grajeda" loading="lazy" />
             <div class="info">
                 <h3 class="name">Jonathan Grajeda</h3>
-                <h3 class="place">México CDMX</h3>
+                <p class="place">México CDMX</p>
                 <div class="icons_container">
                     <a href="https://www.behance.net/jg_john_design" class="icon_container animated_social_btn">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
@@ -78,7 +78,7 @@
             <img class="photo" src="./src/img/photos/rex.webp" alt="Foto de Maximo Decimo Reximiliano" loading="lazy" />
             <div class="info">
                 <h3 class="name">Maximo Décimo Reximiliano</h3>
-                <h3 class="place">México CDMX</h3>
+                <p class="place">México CDMX</p>
             </div>
         </div>
         <!-- ! ACCESIBILITE BUTTONS - START -->
