--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1 class="title_modal">Como te puedo ayudar?</h1>
                 </div>
                 <div class="modal_info" id="modal_info_contact_form">
-                    <p class="description_modal">Estoy ancioso de hacer proyectos interesantes con tus ideas</p>
+                    <p class="description_modal">Estoy ansioso de hacer proyectos interesantes con tus ideas</p>
                 </div>
                 <form class="form modal_form" id="modal_contact_form" action="https://api.web3forms.com/submit" method="submit">
                     <div class="input_container">
@@ -5820,7 +5820,7 @@
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_contact">Contacto</h1>
                 </div>
-                <h2 class="subtitle_section">Estoy ancioso de hacer proyectos interesantes con tus ideas</h2>
+                <h2 class="subtitle_section">Estoy ansioso de hacer proyectos interesantes con tus ideas</h2>
 
                 <form class="form contact_form" id="contact_form">
                     <h3>Correo</h3>
